disable text selection on firefox due to rendering bug

--- a/zipmoji.css
+++ b/zipmoji.css
@@ -16,7 +16,7 @@
   height: 16px;
   -webkit-user-select: text;
 	-khtml-user-select: text;
-	-moz-user-select: text;
+	-moz-user-select: none;
 	-o-user-select: text;
   user-select: text;
   margin: 1px;
@@ -24,4 +24,8 @@
   position: relative;
   bottom: 5px;
   display: inline-block;
+}
+
+.zm::selection {
+  opacity: 0.0;
 }
